Refactor CreativeTabManager
Use functions provided by Neoforge to add items to creative tabs.